src/test/compile-fail/issue-897.rs
fn f() -> ! {
    ret 42i; //! ERROR expected `_|_` but found `int`
    fail; //! WARNING unreachable statement
}
fn main() { }
